[package]
name = "bcrypt_wasm"
version = "0.0.1"
authors = ["Ih8Cocoa <45525749+Ih8Cocoa@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.50"
bcrypt = "0.5.0"
rand = {version="0.7.0", features=["wasm-bindgen"]}

[profile.release]
opt-level = 'z'
lto = true